0.53 ????-??-??
-bugfix: html_url w/ empty relative url crashes w/ floating point error (thanks markov2)
-bugfix: html_url w/ fragment appends null char to uri (thanks markov2)
-bugfix: html_url segfaults when both rel and base start with "//" (thanks markov2)

0.52 2021-08-20
-feature: html_url now implemented in XS
-feature: html_url has OO ctor equivalent, new_html_url
-feature: short-hand ctor equivalent to new_abs, abs_uri

0.51 2021-08-12
-feature: new constructor, new_abs($rel, $base)
-feature: abs() aliased to absolute()
-feature: rel() aliased to relative()
-feature: canonical() aliased to normalize() (this was true in prior versions, but undocumented)
-feature: normalize() now decodes unreserved chars and normalizes + to %20 (RFC 3986, 6.2.2.2)
-feature: TO_JSON() added as alias of to_string()
-miscellaneous minor efficiency/speed improvements

0.50 2021-08-03
-behavior: correct uri_split and uri to treat leading double-slash in input
 string as the beginning of the authority section, as URI and URI::Split do,
 instead of as the beginning of the path with ad leading empty segment
-feature: new subroutine html_url, which scrubs whitespace permitted by URLs
 read from HTML documents (tab, newline, carriage return) and replaces
 backslashes with forward slashes (also allowed in HTML, I'm afraid)

0.49 2019-08-02
-make 0.48_01 official

0.48_01 2019-07-31
-bugfix: calling query_keyset with a zero-length key could result in a
 malformed query string
-bugfix: calling set_param with an array containing a zero-length string could
 result in a malformed query string

0.48 2019-07-09
-make 0.47_01 official

0.47_01 2019-07-06
-bugfix: fix dynamically set $VERSION in URI::Fast::IRI

0.47 2019-07-05
-bugfix: escape_tree and unescape_tree die when called with non-reference
 argument
-workaround: an older release had a versioned URI::Fast::IRI, requiring that it
 remains versioned to keep the cpan indexer happy; this change works around